# pysimdeum

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  difference_house_patterns.csv  minimal_example.py  mkdocs.yml  pysim-1-1-1.ipynb  pysim-nutrients.ipynb  rapid_assessment_tool_simulation.ipynb  requirements.txt  setup.cfg  sim_water_use.py  test.xlsx  test_output.inp  water_use_tests.py  water_use_tests2.py
.github/workflows/: python-publish.yml
data/NL/: diurnal_patterns.toml
data/UU_english/: household_statistics.toml
docs/: CHANGELOG.md  config.md  index.md  installation.md  population.md  pysimdeum_run.md  quick_start.md  schema.md
docs/consumption/: common_methods.md  enduse_specifics.md  overview.md
docs/discharge/: Water quality.md  common_methods.md  enduse_specifics.md  overview.md  water_quality.md
docs/examples/: 1_intro_to_pysimdeum.ipynb  2_consumption_object.ipynb  3_discharge_object.ipynb  4_multiday_sims_and_spillover.ipynb  5_wastewater_quality.ipynb  6_writing_data.ipynb  7_advanced_simulation_population_fitting_and_subcatchment_aggregation.ipynb
examples/: 1_intro_to_pysimdeum.ipynb  2_consumption_object.ipynb  3_discharge_object.ipynb  8_writing_data__for_infoworks.ipynb  infoworks-data.ipynb  minimal_example.py  pysim-nutrients.ipynb
pySIMDEUM/: __init__.py  end_use.py  house.py  sim_water_use.py  statistics.py  user.py  utils.py
pySIMDEUM/core/: api.py  end_use.py  helper.py  house.py  old_end_use.py  plot.py  statistics.py  user.py  utils.py  write.py
pySIMDEUM/post_processor_utilities/: ApplianceWaterUse.py  DemandPatternPostProcessor.py  demand_pattern_post_processing.py  epanet_classes.py  epanet_integration.py  epanet_integration_functions.py  water_use_distribution_post_processing.py
pySIMDEUM/pre_processor_utilities/: statistics_utilities.py
pySIMDEUM/tests/: test_house.py
pySIMDEUM/utilitites/: ApplianceWaterUse.py  DemandPatternPostProcessor.py  information_from_statistics_functions.py  statistics_plot_functions.py
pysimdeum/: __init__.py  api.py
testing/: test_helper.py  test_house.py  test_plot.py
(+70 files in other folders)
