[metadata]
name = pysimdeum
version = 0.0.1
description = A stochastic water demand end-use model in Python
;author = David B. Steffelbauer
;author-email = david.steffelbauer@kompetenz-wasser.de
;maintainer = Bram Hillebrand
;maintainer-email = bram.hillebrand@kwrwater.nl
;long_description = file: README.md
license = EUPL
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: EUPL License
    Programming Language :: Python :: 3.8
    Typing :: Typed
;url = https://github.com/KWR-Water/pysimdeum
project_urls =
    Documentation = https://pysimdeum.readthedocs.io
keyword =
    water demand
    modelling
    stochastic

[options]
python_requires_python = >3.8
install_requires =
    matplotlib
    numpy
    pandas
    toml
    xarray
    scipy
packages = find:

[options.package_data]
* = *.exe

[options.packages.find]
exclude =
    examples
    testing
