[metadata]
name = pysimdeum
version = 0.0.7
description = A stochastic water demand end-use model in Python
author = David B. Steffelbauer
author-email = david.steffelbauer@kompetenz-wasser.de
maintainer = Bram Hillebrand
maintainer-email = bram.hillebrand@kwrwater.nl
long_description = file: README.md
long_description_content_type = text/markdown
license = "EUPL"
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Programming Language :: Python :: 3.8
    Typing :: Typed
url = https://github.com/KWR-Water/pysimdeum
project_urls =
    Documentation = https://pysimdeum.readthedocs.io
keyword =
    water demand
    modelling
    stochastic

[options]
python_requires_python = >3.8
install_requires =
    matplotlib
    numpy
    pandas
    toml
    xarray
    scipy
package_dir = 
    =pysimdeum
packages=find:

;include_package_data = True

;[options.package_data]

[options.packages.find]
where=pysimdeum
include = *
